# Approaches_to_detect_behavioural_changes

./: .gitignore  README.md
Suffix/: Suffix_Tree.ipynb
maggotuba/: README.md  requirements.txt  setup.cfg  setup.py
maggotuba/client_code/: embed_exotic_behaviors.py  evaluate_separation_new_behaviors.py  plot_chloe_line_labels.py  slurmmmd.sh
maggotuba/client_code/all_hits_t5/: aggregate_bootstraps.py  batch_job.sh  format_for_chloe.py  inv_ref_dict_t5.pickle  launcher.sh  list_protocols.py  slurmmmd.py
maggotuba/client_code/all_hits_t5/print_bandwidths/: print_bandwidths.py
maggotuba/client_code/all_hits_t5/saving_timeouts/: batch_job.sh  launcher.sh  lines.txt  ref_dict_t5.pickle  slurmmmd_timeout.py
maggotuba/client_code/figures_for_paper/figure4/: cluster_labels.csv  figure_4B.py  figure_4C_4D.py  figure_4D.eps
maggotuba/client_code/figures_for_paper/figure5/: figure_5.py  retrieve_t2.py
maggotuba/client_code/figures_for_paper/figure8/: figure8_cluster_lines.py  histogram_t5_20.pkl  script_line_comparisons.sh  umap_lines.pkl.bak
maggotuba/client_code/figures_for_paper/new_hits/: new_hits_embedding.py
maggotuba/client_code/t5_analysis/: MDSProb.py  behavior_histogram_t5.py  embed_t5.py  embed_t5_and_MMD.py  line_temporal_evolution.py  matrix_t5.py  mmd_t5.py  mmdtraj_t5.py  null_distribution.py  quadmmd_t5.py
maggotuba/src/maggotuba/: .cli_mmd.py.swo
maggotuba/src/maggotuba/behavior_model/: args.py
maggotuba/src/maggotuba/cli/: cli.py  cli_mmd.py  cli_model.py  cli_model_clustering.py  cli_plot.py
maggotuba/tests/: conftest.py  test_cli.py
(+27 files in other folders)
