[metadata]
name = maggotuba
version = 0.0.1
author = Alexandre Blanc
author_email = aleblanc@pasteur.fr
description = A package to analyze fly larva behaviour
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.pasteur.fr/les-larves/structured-temporal-convolution
project_urls=
    Bug Tracker = https://gitlab.pasteur.fr/les-larves/structured-temporal-convolution/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[build_ext]
inplace = 1

[options]
package_dir =
    =src
packages = find_namespace:
python_requires = >=3.8

install_requires = 
    pyyaml
    scikit-learn
    umap-learn[plot]
    matplotlib
    numpy
    scipy
    pandas
    plotly
    torch
    torchvision
    torchaudio
    tensorflow
    h5py
    mat73
    gudhi
    pyside2
    pyqtgraph
        

[options.packages.find]
where = src
exclude = cmmd

[options.entry_points]
console_scripts =
    maggotuba = maggotuba.cli.cli:main
    # point_dynamics_from_trx = maggotuba.behavior_model.data.point_dynamics_from_trx
